[package]
name = "necodl"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = "10.0.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
md5 = "0.7"
anyhow = "1.0"
toml = "0.9.5"
once_cell = "1.18.0"
sha2 = "0.10.8"
async-recursion = "1.1.1"
scraper = "0.23.1"
